<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/NameLabel"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/round_input"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/platform_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/PlatformLabel"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_editText" />

    <Spinner
        android:id="@+id/platform_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@android:drawable/btn_dropdown"
        android:inputType="text"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/platform_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platform_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/form_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/FormLabel"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platform_spinner" />

    <Spinner
        android:id="@+id/form_spinner"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:inputType="text"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/form_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_label"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addGameButton_name"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_spinner" />


</android.support.constraint.ConstraintLayout>